istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bloggingapp-vs
  namespace: blogging
spec:
  hosts:
    - adarsh-jain-ecom.gt.tc
  gateways:
    - bloggingapp-gateway
  http:
    - match:
        - uri:
            prefix: /
      headers:
        request:
          set:
            X-Forwarded-Proto: http
            X-Forwarded-Port: "80"
            X-Forwarded-Host: adarsh-jain-ecom.gt.tc
      route:
        - destination:
            host: bloggingapp-ssvc
            port:
              number: 80
